--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ####输出sql日志###
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-oss.endpoint=oss-cn-huhehaote.aliyuncs.com
-oss.accessKeyId=LTAI5tEB1axwDqQARTQUpwjx
-oss.accessKeySecret=NUfBRyhhJUYyp7TC0EOu7LgUMX9KzG
-oss.bucketName=comely-music-bucket
+oss.accessKeyId=${ACCESSKEY_ID}
+oss.accessKeySecret=${ACCESSKEY_SECRET}
