--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 oss.accessKeyId=${ACCESSKEY_ID}
 oss.accessKeySecret=${ACCESSKEY_SECRET}
+
+#文件大小限制
+spring.servlet.multipart.max-request-size=200MB
+spring.servlet.multipart.max-file-size=200MB
