--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,15 @@ spring.datasource.url=jdbc:mysql://39.99.112.72:3306/comely-music?characterEncod
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 ####输出sql日志###
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
+#oss配置
 oss.accessKeyId=${ACCESSKEY_ID}
 oss.accessKeySecret=${ACCESSKEY_SECRET}
 
+oss.token.accessKeyId=${OSS_TOKEN_ACCESSKEY_ID}
+oss.token.accessKeySecret=${OSS_TOKEN_ACCESSKEY_SECRET}
+oss.token.rolearn=${OSS_TOKEN_ROLEARN}
 #文件大小限制
 spring.servlet.multipart.max-request-size=200MB
 spring.servlet.multipart.max-file-size=200MB
