--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 ####数据库连接池###
 spring.datasource.url=jdbc:mysql://39.99.112.72:3306/comely-music?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ####输出sql日志###
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
