--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ oss.token.rolearn=${OSS_TOKEN_ROLEARN}
 #文件大小限制
 spring.servlet.multipart.max-request-size=200MB
 spring.servlet.multipart.max-file-size=200MB
+#redis配置
+spring.redis.database=0
+spring.redis.host=39.99.112.72
+spring.redis.port=6379
+spring.redis.password=${REDIS_PASSWORD}
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=2
+spring.redis.timeout=6000
