--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ComelyMusic
-# 应用服务 WEB 访问端口
+####应用服务 WEB 访问端口###
 server.port=8080
 ####数据库连接池###
 spring.datasource.url=jdbc:mysql://39.99.112.72:3306/comely-music?characterEncoding=UTF8&userSSL=false
@@ -8,17 +8,16 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ####输出sql日志###
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-#oss配置
+####oss配置###
 oss.accessKeyId=${ACCESSKEY_ID}
 oss.accessKeySecret=${ACCESSKEY_SECRET}
-
 oss.token.accessKeyId=${OSS_TOKEN_ACCESSKEY_ID}
 oss.token.accessKeySecret=${OSS_TOKEN_ACCESSKEY_SECRET}
 oss.token.rolearn=${OSS_TOKEN_ROLEARN}
-#文件大小限制
+####文件大小限制###
 spring.servlet.multipart.max-request-size=200MB
 spring.servlet.multipart.max-file-size=200MB
-#redis配置
+####redis配置###
 spring.redis.database=0
 spring.redis.host=39.99.112.72
 spring.redis.port=6379
