--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ComelyMusic
 ####应用服务 WEB 访问端口###
 server.port=8080
 ####数据库连接池###
-spring.datasource.url=jdbc:mysql://39.99.112.72:3306/comely-music-backup?characterEncoding=UTF8&userSSL=false
+spring.datasource.url=jdbc:mysql://39.99.112.72:3306/comely-music?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
